--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ section {
     padding: 0 16px;
 }
 
-button:hover{
-    cursor: pointer;
+.no__cursor {
+    cursor: no-drop;
 }
 
 .purple {
@@ -47,6 +47,11 @@ button:hover{
     border: none;
     font-weight: 500;
     font-size: 16px;
+    transition: all 300ms ease;
+}
+
+.btn:hover {
+    background-color: #3f0ea1;
 }
 
 .section__title {
@@ -77,6 +82,16 @@ button:hover{
     padding: 96px 0;
 }
 
+.link__hover-effect:after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    bottom: -3px;
+    left: 0;
+    transition: all 300ms ease;
+}
+
 /*
 
 NAVIGATION
@@ -100,6 +115,10 @@ nav {
     align-items: center;
 }
 
+.logo__wrapper:hover {
+    cursor: pointer;
+}
+
 .nav__logo {
     max-width: 48px;
     margin-right: 12px;
@@ -109,17 +128,32 @@ nav {
     font-size: 28px;
     font-weight: 700;
     color: #35456d;
+    transition: all 300ms ease;
+}
+
+.nav__logo--name:hover {
+    color: #6415ff;
 }
 
 .nav__links {
     display: flex;
 }
 
-.nav__link{
+.nav__link {
+    position: relative;
     color: #35456d;
     margin: 0 24px;
     font-weight: 500;
     font-size: 15px;
+    transition: all 300ms ease;
+}
+
+.nav__link:hover {
+    color: #6415ff;
+}
+
+.link__hover-effect--purple:hover:after {
+    background-color: #6415ff;
 }
 
 .nav__link--primary {
@@ -127,6 +161,11 @@ nav {
     padding: 12px 32px;
     border-radius: 50px;
     background-color: #6415ff;
+    transition: all 300ms ease;
+}
+
+.nav__link--primary:hover {
+    background-color: #3f0ea1;
 }
 
 /*
@@ -159,6 +198,7 @@ HEADER
     width: 100%;
     max-width: 400px;
     margin-bottom: 64px;
+    transition: all 200ms ease;
 }
 
 .header__input {
@@ -168,6 +208,17 @@ HEADER
     border-radius: 50px;
 }
 
+.input__active .header__form {
+    border-color: #6415ff;
+}
+
+.header__input:focus {
+    outline: none;
+}
+
+.header__btn:hover {
+    cursor: pointer;
+}
 
 .header__img--wrapper {
     width: 60%;
@@ -327,4 +378,207 @@ STEPS
     color: rgb(105, 105, 105);
     font-size: 16px;
     font-weight: 400;
+}
+
+/*
+
+PLANS
+
+*/
+
+.plans__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.plans__description--para {
+    width: 100%;
+    max-width: 525px;
+    text-align: center;
+}
+
+.plans {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 64px;
+    justify-content: space-between;
+}
+
+.plan {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    border: 0.5px solid #a8b1bd;
+    border-radius: 8px;
+}
+
+.plan__wrapper {
+    padding: 0 32px;
+}
+
+.plan__header,
+.plan__content,
+.plan__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0;
+}
+
+.plan1__top {
+    height: 8px;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    border-radius: 8px 8px 0 0;
+}
+
+.plan3__top {
+    height: 8px;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    border-radius: 8px 8px 0 0;
+}
+
+.plan__type {
+    font-size: 20px;
+}
+
+.plan__price {
+    font-size: 48px;
+    margin: 16px 0;
+}
+
+.plan__frequency {
+    font-size: 16px;
+    color: #87909e;
+}
+
+.plan__subheader {
+    font-size: 20px;
+}
+
+.plan__feature {
+    margin-top: 20px;
+    color: #87909e;
+    font-weight: 500;
+}
+
+.plan__btn {
+    padding: 16px 56px;
+    border: none;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 500;
+    transition: all 300ms ease;
+}
+
+.plan__btn:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    filter: brightness(0.9);
+    transform: translate(1px, -1px);
+}
+
+.plan1__btn {
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    color: white;
+}
+
+.plan2__btn {
+    background-color: white;
+    color: #6415ff;
+}
+
+.plan3__btn {
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    color: white;
+}
+
+.plan2 {
+    background-image: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+    color: white;
+}
+
+.plan2__frequency,
+.plan2__feature {
+    color: white;
+}
+
+/*
+
+FOOTER
+
+*/
+
+footer {
+    margin-top: 96px;
+    background-color: #6415ff;
+}
+
+.links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 96px 0 56px 0;
+}
+
+.link {
+    display: flex;
+    flex-direction: column;
+}
+
+.link__title {
+    font-size: 16px;
+    color: white;
+    margin-bottom: 32px;
+}
+
+.footer__link {
+    position: relative;
+    color: white;
+    font-size: 14px;
+}
+
+.footer__link--wrapper {
+    margin-bottom: 16px;
+}
+
+.link__hover-effect--white:hover:after {
+    background-color: white;
+}
+
+
+.footer__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 56px 0 96px 0;
+}
+
+.footer__logo--wrapper {
+    display: flex;
+}
+
+.footer__logo {
+    width: 32px;
+}
+
+.footer__logo--name {
+    margin-left: 8px;
+    color: white;
+}
+
+.footer__para {
+    color: white;
+}
+
+.social__link {
+    padding: 8px;
+    background-color: white;
+    border-radius: 50%;
+    margin-left: 16px;
+    font-size: 16px;
+    transition: all 100ms;
+}
+
+.social__link:hover {
+    filter: brightness(0.9);
 }
