--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p {
 }
 
 section {
-    padding: 0 16px;
+    padding: 0 24px;
 }
 
 .no__cursor {
@@ -166,6 +166,110 @@ nav {
 
 .nav__link--primary:hover {
     background-color: #3f0ea1;
+}
+
+.btn__menu {
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    text-align: center;
+    color: #35456d;
+    display: none;
+}
+
+.btn__menu:hover {
+    cursor: pointer;
+    color: #6415ff;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+    visibility: hidden;
+    opacity: 0;
+    margin: 24px 16px;
+    border: 0.5px solid #a8b1bd;
+    border-radius: 8px;
+    width: 96.8%;
+}
+
+.menu--open .header__form {
+    opacity: 0;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+    animation: menu-fade 300ms;
+}
+
+@keyframes menu-fade {
+    0% {
+        transform: translateX(100%);
+    }
+
+    90% {
+        transform: translateX(-5%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 16px 0;
+}
+
+.menu__link {
+    position: relative;
+    font-size: 18px;
+    color: black;
+    font-weight: 500;
+    transition: all 300ms ease;
+}
+
+.menu__link:hover {
+    color: #6415ff;
+}
+
+.menu__link--primary {
+    color: white;
+    padding: 12px 32px;
+    border-radius: 50px;
+    background-color: #6415ff;
+    transition: all 300ms ease;
+}
+
+.menu__link--primary:hover {
+    background-color: #3f0ea1;
+    color: white;
+}
+
+.btn__menu--closed {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: #35456d;
+}
+
+.btn__menu--closed:hover {
+    cursor: pointer;
+    color: #6415ff;
 }
 
 /*
@@ -511,6 +615,7 @@ FOOTER
 footer {
     margin-top: 96px;
     background-color: #6415ff;
+    padding: 0 24px;
 }
 
 .links {
@@ -581,4 +686,280 @@ footer {
 
 .social__link:hover {
     filter: brightness(0.9);
+}
+
+/*
+
+ANIMATIONS
+
+*/
+
+#landing,
+#work,
+#plans {
+    animation: fade-from-left 500ms;
+}
+
+#features,
+#steps,
+footer {
+    animation: fade-from-right 500ms;
+}
+
+@keyframes fade-from-left {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fade-from-right {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@media (max-width: 1280px) {
+    .header__title {
+        font-size: 36px;
+    }
+
+    .header__img--wrapper {
+        width: 45%;
+    }
+
+    .header__description {
+        width: 41%;
+    }
+    
+    .header__wrapper {
+        justify-content: space-between;
+    }
+}
+/* bars */
+@media (max-width: 1024px) {
+
+    .nav__link {
+        display: none;
+    }
+
+    .nav__link--primary {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+
+    .header__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__description {
+        width: 100%;
+        max-width: 512px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 36px;
+    }
+
+    .header__title {
+        font-size: 30px;
+    }
+
+    .header__form {
+        text-align: center;
+    }
+
+    .services {
+        display: flex;
+        justify-content: center;
+    }
+
+    .service {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .section__title {
+        font-size: 36px;
+    }
+
+    .work__img--wrapper {
+        height: 75%;
+    }
+
+    .section__wrapper {
+        align-items: center;
+    }
+
+    .plans {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .plan {
+        width: 100%;
+        max-width: 384px;
+        margin: 0 auto;
+        margin-bottom: 56px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+}
+
+@media (max-width: 768px) {
+    .header__img--wrapper {
+        width: 100%;
+        max-width: 512px;
+    }
+
+    .service {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .section__wrapper {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .work__description {
+        width: 100%;
+        max-width: 448px;
+        text-align: center;
+        margin: 0;
+        align-items: center;
+    }
+
+    .work__img--wrapper,
+    .steps__img--wrapper {
+        width: 100%;
+        max-width: 448px;
+        margin-bottom: 48px;
+    }
+
+    .section__para {
+        font-size: 14px;
+    }
+
+    .steps__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+    }
+
+    .steps__description {
+        text-align: center;
+        width: 100%;
+        max-width: 448px;
+        align-items: center;
+    }
+
+    .step {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .step__description {
+        margin: 0;
+        width: 100%;
+        max-width: 320px;
+        margin: 0 auto;
+    }
+
+    .step__number {
+        margin-bottom: 12px;
+    }
+
+    .steps__img--wrapper {
+        margin-right: 0;
+    }
+
+    .links {
+        justify-content: start;
+    }
+
+    .link {
+        width: calc(100% / 3);
+        margin-bottom: 48px;
+    }
+
+    .footer__info {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__para {
+        margin: 32px 0;
+    }
+}
+
+@media (max-width: 640px) {
+    .header__form {
+        display: flex;
+        flex-direction: column;
+        border: none;
+    }
+
+    .header__input {
+        margin-bottom: 16px;
+        border: 2px solid #a8b1bdaf;
+        border-radius: 50px;
+        padding: 16px 32px;
+    }
+
+    .input__active .header__input {
+        border-color: #6415ff;
+    }
+
+    .header__btn {
+        padding: 16px 32px;
+    }
+    .service {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .service__description {
+        text-align: center;
+        margin-left: 0;
+    }
+
+    .service__para {
+        width: 100%;
+        max-width: 336px;
+        margin: 0 auto;
+    }
+
+    .service__title {
+        margin: 12px 0;
+    }
+
+    .link {
+        width: 112px;
+        flex-wrap: wrap;
+    }
+
+    .links {
+        justify-content: center;
+    }
 }
